Complete rewrite of Java interview preparation guide with informal tone, blog post links, and interview questions
Co-authored-by: sps23 <58396310+sps23@users.noreply.github.com>